# tic-tac-AI

./: Makefile  compose.yml  full_simulation_results1.csv  pyproject.toml  ruff.toml
.cache/fontconfig/: 3830d5c3ddfd5cd38a049b759396e72e-le64.cache-9  4c599c202bc5c08e2d34565a40eac3b2-le64.cache-9  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-9  d589a48862398ed80a3d6066f4f56f4c-le64.cache-9
.cache/matplotlib/: fontlist-v390.json
.github/workflows/: build.yml
.ipython/profile_default/: history.sqlite
.jupyter/: migrated
.jupyter/lab/workspaces/: default-37a8.jupyterlab-workspace
.local/share/Trash/info/: Untitled.ipynb.trashinfo  grafico_comparacion_directa.png.trashinfo  grafico_rendimiento_promedio.png.trashinfo  rendimiento_algoritmos 1.png.trashinfo  rendimiento_algoritmos 2.png.trashinfo  rendimiento_algoritmos.png.trashinfo  rendimiento_algoritmos.svg.trashinfo
.local/share/jupyter/: nbsignatures.db  notebook_secret
.local/share/jupyter/runtime/: jupyter_cookie_secret
queries/: full_simulation_results.csv  queries.ipynb
queries/.ipynb_checkpoints/: queries-checkpoint.ipynb
src/: config.py  main.py  simulate.py
src/ai/: minimax.py
src/game_logic/: board.py
src/gui/: renderer.py
tests/: test_smoke.py
